# 39_Faults

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Readme.md  structure
backend/: Readme.md  build.py  init_db.py  main.py  pyproject.toml  requirements.txt
backend/app/: _version.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: faults.py
backend/app/core/: config.py  database.py  models.py
backend/app/models/: all_models.py  project.py
backend/app/schemas/: fault.py
bugs/: bug-001.md
docs/: Promt.md  Readme.md  RelNote.txt
scripts/: init_backend.sh  init_backend_env.sh  run.sh  toexe.sh  venv_pip.sh
