[project]
name = "faults"
version = "0.0.1"
description = "Add your description here"
readme = "../Readme.md"
requires-python = ">=3.8"
authors = [
    {name = "sanja_s", email = "sanja100v@gmail.com"}
]

dependencies = []

[project.urls]
Repository = "https://github.com/sanjas12/39_Faults.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
build = []

dev = [
    "commitizen>=3.27.0",
    "pre-commit>= 2.0.0, < 3.0.0",
    "python-semantic-release>=9.3.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    # "sys_platform == 'linux'",  # раскоментить если будет в linux собираться
]

[tool.setuptools]
packages = ["app"]

# ─── Ruff: линтер + форматер ─────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"