[project]
name = "faults"
version = "0.0.1"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.8, <3.9"
authors = [
    {name = "sanja_s", email = "sanja100v@gmail.com"}
]

dependencies = [
    "annotated-types==0.7.0 ; sys_platform == 'win32'",
    "argcomplete==3.5.3 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "argcomplete==3.6.3 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "certifi==2026.5.20 ; sys_platform == 'win32'",
    "cfgv==3.4.0 ; python_full_version < '3.10' and sys_platform == 'win32'",
    "cfgv==3.5.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "charset-normalizer==3.4.7 ; sys_platform == 'win32'",
    "click==8.1.8 ; sys_platform == 'win32'",
    "click-option-group==0.5.9 ; sys_platform == 'win32'",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "commitizen==3.31.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "commitizen==4.10.1 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "commitizen==4.16.2 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "coverage==7.10.7 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "coverage==7.14.1 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "coverage==7.6.1 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "decli==0.6.2 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "decli==0.6.3 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "deprecated==1.3.1 ; sys_platform == 'win32'",
    "distlib==0.4.0 ; sys_platform == 'win32'",
    "dotty-dict==1.3.1 ; sys_platform == 'win32'",
    "exceptiongroup==1.3.1 ; python_full_version < '3.11' and sys_platform == 'win32'",
    "fastapi>=0.124.4",
    "filelock==3.16.1 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "filelock==3.19.1 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "filelock==3.29.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "gitdb==4.0.12 ; sys_platform == 'win32'",
    "gitpython==3.1.50 ; sys_platform == 'win32'",
    "identify==2.6.1 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "identify==2.6.15 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "identify==2.6.19 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "idna==3.15 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "idna==3.17 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "importlib-metadata==8.5.0 ; python_full_version < '3.10' and sys_platform == 'win32'",
    "importlib-resources==6.4.5 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "importlib-resources==6.5.2 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "iniconfig==2.1.0 ; python_full_version < '3.10' and sys_platform == 'win32'",
    "iniconfig==2.3.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "jinja2==3.1.6 ; sys_platform == 'win32'",
    "markdown-it-py==3.0.0 ; python_full_version < '3.10' and sys_platform == 'win32'",
    "markdown-it-py==4.2.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "markupsafe==2.1.5 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "markupsafe==3.0.3 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "mdurl==0.1.2 ; sys_platform == 'win32'",
    "nodeenv==1.10.0 ; sys_platform == 'win32'",
    "packaging==26.2 ; sys_platform == 'win32'",
    "platformdirs==4.10.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "platformdirs==4.3.6 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "platformdirs==4.4.0 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "pluggy==1.5.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pluggy==1.6.0 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "pre-commit==2.21.0 ; sys_platform == 'win32'",
    "prompt-toolkit==3.0.51 ; sys_platform == 'win32'",
    "pydantic==2.10.6 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pydantic==2.13.4 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "pydantic-core==2.27.2 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pydantic-core==2.46.4 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "pydantic-settings>=2.8.1",
    "pygments==2.19.2 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pygments==2.20.0 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "pytest==8.3.5 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pytest==8.4.2 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "pytest==9.0.3 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "pytest-cov==5.0.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "pytest-cov==7.1.0 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "python-discovery==1.4.0 ; sys_platform == 'win32'",
    "python-gitlab==4.13.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "python-gitlab==6.5.0 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "python-semantic-release==10.5.3 ; sys_platform == 'win32'",
    "pyyaml==6.0.3 ; sys_platform == 'win32'",
    "questionary==2.1.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "questionary==2.1.1 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "requests==2.32.4 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "requests==2.32.5 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "requests==2.34.2 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "requests-toolbelt==1.0.0 ; sys_platform == 'win32'",
    "rich==14.3.4 ; sys_platform == 'win32'",
    "shellingham==1.5.4 ; sys_platform == 'win32'",
    "smmap==5.0.3 ; sys_platform == 'win32'",
    "sqlalchemy>=2.0.50",
    "termcolor==2.4.0 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "termcolor==3.1.0 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "termcolor==3.3.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "tomli==2.4.1 ; python_full_version <= '3.11' and sys_platform == 'win32'",
    "tomlkit==0.13.3 ; sys_platform == 'win32'",
    "typing-extensions==4.13.2 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "typing-extensions==4.15.0 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "typing-inspection==0.4.2 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "urllib3==2.2.3 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "urllib3==2.6.3 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
    "urllib3==2.7.0 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "uvicorn>=0.33.0",
    "virtualenv==21.4.1 ; sys_platform == 'win32'",
    "wcwidth==0.7.0 ; sys_platform == 'win32'",
    "wrapt==2.0.1 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "wrapt==2.2.1 ; python_full_version >= '3.9' and sys_platform == 'win32'",
    "zipp==3.20.2 ; python_full_version < '3.9' and sys_platform == 'win32'",
    "zipp==3.23.1 ; python_full_version == '3.9.*' and sys_platform == 'win32'",
]

[project.urls]
Repository = "https://github.com/sanjas12/39_Faults.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
build = []

dev = [
    "commitizen>=3.27.0",
    "pre-commit>= 2.0.0, < 3.0.0",
    "python-semantic-release>=9.3.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    # "sys_platform == 'linux'",  # раскоментить если будет в linux собираться
]

[tool.setuptools]
packages = ["app"]

# ─── Ruff: линтер + форматер ─────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
    "SIM",
]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
